# jawafdehi-agentspan

./: .env  .gitignore  README.md  jawafdehi-visual-pipeline.yaml  pyproject.toml  test_debug.py  test_pickle.py
assets/ciaa_caseworker/instructions/: INSTRUCTIONS.md
assets/prompts/: case-draft-router.md  case-draft.md  case-template.md  critique-extractor.md  drafter.md  filesystem.md  news-gatherer.md  orchestrator.md  prepare-information.md  publisher.md  reviewer.md  reviser.md  router.md  section-drafter.md  short-description.md
docs/superpowers/plans/: 2026-04-20-payload-safe-drafting-workflow.md
docs/superpowers/specs/: 2026-04-20-jawafdehi-drafting-workflow-design.md
files/data/: ag_index.csv
jawafdehi-mcp/: pyproject.toml
jawafdehi-mcp/jawafdehi_mcp/: __init__.py  _config.py  server.py
scripts/: format.sh
src/jawaf_span/: agents.py  assets.py  cli.py  dependencies.py  mcp_adapters.py  models.py  run_service.py  runtime.py  tools.py  workspace.py
src/jawafdehi_agentspan/: __init__.py  agents.py  assets.py  cli.py  dependencies.py  logging_utils.py  mcp_adapters.py  models.py  run_service.py  runtime.py  settings.py  tools.py  win_compat.py  workspace.py
src/jawafdehi_agentspan/agents/: __init__.py  ciaa.py  drafter.md  reviewer.md  reviser.md
src/jawafdehi_agentspan/evidence/: __init__.py  chunker.py  context_selector.py  contracts.py  finalizer.py
tests/: test_cli.py  test_dependencies.py  test_evidence_chunker.py  test_evidence_context_selector.py  test_evidence_contracts.py  test_evidence_finalizer.py  test_mcp_adapters.py  test_models.py  test_run_service.py  test_run_service_payload_safe.py  test_runtime.py  test_tools.py  test_win_compat.py
